--- a/styles/style.css
+++ b/styles/style.css
@@ -33,7 +33,7 @@ body {
   background-repeat: no-repeat;
   background-position: 50%;
   border-radius: 1rem;
-  background-color: hfylo-data-storage-component-mastersl(229, 57%, 11%);
+  background-color: hsl(229, 57%, 11%);
 }
 .card1__main__folder {
   background-image: url(../images/icon-folder.svg);
@@ -41,7 +41,7 @@ body {
   background-repeat: no-repeat;
   background-position: 50%;
   border-radius: 1rem;
-  background-color: hfylo-data-storage-component-mastersl(229, 57%, 11%);
+  background-color: hsl(229, 57%, 11%);
   margin: 0 1.5rem 0 1.5rem;
 }
 .card1__main__upload {
@@ -50,7 +50,7 @@ body {
   background-repeat: no-repeat;
   background-position: 50%;
   border-radius: 1rem;
-  background-color: hfylo-data-storage-component-mastersl(229, 57%, 11%);
+  background-color: hsl(229, 57%, 11%);
 }
 
 .card2 {
@@ -75,7 +75,7 @@ body {
 .card2__bar {
   width: 80%;
   height: 2.1rem;
-  background-color: hfylo-data-storage-component-mastersl(229, 57%, 11%);
+  background-color: hsl(229, 57%, 11%);
   border-radius: 1rem;
 }
 .card2__barcolor {
@@ -127,7 +127,12 @@ body {
   margin-left: 1rem;
 }
 
-@media screen and (max-width: 376px) {
+@media screen and (max-width: 377px) {
+  html {
+    font-size: 58%;
+  }
+}
+@media screen and (max-width: 351px) {
   html {
     font-size: 50%;
   }
