--- a/styles/style.scss
+++ b/styles/style.scss
@@ -170,6 +170,7 @@ body{
         margin-right: 4rem;
         height: 20.5rem;
         width: 36rem;
+        margin-left: 20rem;
         &__img{
             margin: 3rem 0 1rem 4rem;
             width: 15rem;
@@ -203,9 +204,9 @@ body{
         }
     }
     .gbleft{
-        position:absolute;
-        top: 37%;
-        left: 69%;
+        position:relative;
+        bottom: 5rem;
+        right: 117%;
         width: 17rem;
         height: 6.5rem;
         border-radius: 1rem;
